# foreign-exchange-api/src/main/java/com/exchange/foreign_exchange_api/api/dto/ConversionRequest.java
@@ -1,0 +1,8 @@
+package com.exchange.foreign_exchange_api.api.dto;
+
+import com.exchange.foreign_exchange_api.model.CurrencyCode;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Positive;
+
+public record ConversionRequest(
+    @NotNull @Positive double amount, @NotNull CurrencyCode source, @NotNull CurrencyCode target) {}
